<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:title="@string/dictionaries"
            android:id="@+id/nav_drawer_dictionaries"
            android:icon="@drawable/ic_local_library"/>
        <item
            android:title="@string/grammar"
            android:id="@+id/nav_drawer_grammar"
            android:icon="@drawable/ic_attach_file"/>


        <item
            android:id="@+id/nav_drawer_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_drawer_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>
</menu>