<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/word_editor"
                      android:textSize="20dp"
                      android:textColor="@color/text_color_main"/>
            <EditText android:id="@+id/word_edit_text"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/word_hint"
                      android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/translation_editor"
                      android:textSize="20dp"
                      android:textColor="@color/text_color_main"/>
            <EditText android:id="@+id/translation_edit_text"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/translation_hint"
                      android:textStyle="italic"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox android:id="@+id/learned_check_box"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/learned_check_box"    />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/id_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uuid_text_view"
                android:textSize="10sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>