<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:id="@+id/item_md_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="4dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_md_word_text_view"
                    android:text="@string/word"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_md_forms_text_view"
                    android:text="@string/forms"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_toRightOf="@id/item_md_word_text_view"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_md_translation_text_view"
                    android:text="@string/translation"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_below="@id/item_md_word_text_view"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="24dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&#8942;"
                    app:srcCompat="@drawable/ic_more"
                    android:id="@+id/item_md_options_menu"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_marginTop="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"/>
                <ImageView
                    android:id="@+id/item_md_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_border"
                    android:layout_below="@+id/item_md_options_menu"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="7dp"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>